--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
     - os: osx
       osx_image: xcode9.2
       sudo: required
+      env: SWIFT_SNAPSHOT=4.0
 before_install:
 - git clone https://github.com/IBM-Swift/Package-Builder.git
 script:
