--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ matrix:
       osx_image: xcode9.2
       sudo: required
       env: SWIFT_SNAPSHOT=4.0
+    - os: osx
+      osx_image: xcode9.2
+      sudo: required
+      env: SWIFT_SNAPSHOT=swift-4.1-DEVELOPMENT-SNAPSHOT-2018-02-06-a  
 before_install:
 - git clone https://github.com/IBM-Swift/Package-Builder.git
 script:
