--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: SWIFT_SNAPSHOT=swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-23-a
+      env: SWIFT_SNAPSHOT=swift-4.2
     - os: osx
       osx_image: xcode9.2
       sudo: required
@@ -24,10 +24,10 @@ matrix:
     - os: osx
       osx_image: xcode9.4
       sudo: required
+      env: SWIFT_SNAPSHOT=swift-4.1.2
     - os: osx
-      osx_image: xcode9.4
+      osx_image: xcode10
       sudo: required
-      env: SWIFT_SNAPSHOT=swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a
 
 before_install:
 - git clone https://github.com/IBM-Swift/Package-Builder.git
