--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: SWIFT_SNAPSHOT=swift-4.2
+      env: SWIFT_SNAPSHOT=4.2
     - os: osx
       osx_image: xcode9.2
       sudo: required
@@ -24,7 +24,7 @@ matrix:
     - os: osx
       osx_image: xcode9.4
       sudo: required
-      env: SWIFT_SNAPSHOT=swift-4.1.2
+      env: SWIFT_SNAPSHOT=4.1.2
     - os: osx
       osx_image: xcode10
       sudo: required
