--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+# Travis CI build file.
+
+# whitelist (branches that should be built)
 branches:
   only:
   - master
   - develop
   - /^issue.*$/
 
+# the matrix of builds should cover each combination of Swift version
+# and platform that is supported. The version of Swift used is specified
+# by .swift-version, unless SWIFT_SNAPSHOT is specified.
 matrix:
   include:
     - os: linux
@@ -13,10 +19,20 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: SWIFT_SNAPSHOT=4.1
+      env: SWIFT_SNAPSHOT=4.1.3
     - os: linux
       dist: trusty
       sudo: required
+    - os: linux
+      dist: trusty
+      sudo: required
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:16.04
+    - os: linux
+      dist: trusty
+      sudo: required
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:18.04
     - os: osx
       osx_image: xcode9.2
       sudo: required
@@ -31,5 +47,6 @@ matrix:
 
 before_install:
 - git clone https://github.com/IBM-Swift/Package-Builder.git
+
 script:
 - ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR
