--- a/.travis.yml
+++ b/.travis.yml
@@ -51,10 +51,11 @@ matrix:
     - os: osx
       osx_image: xcode10.2
       sudo: required
-    - os: osx
-      osx_image: xcode10.2
-      sudo: required
-      env: SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
+# Pending Travis Xcode 11 image
+#    - os: osx
+#      osx_image: xcode11
+#      sudo: required
+#      env: SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
 
 before_install:
 - git clone https://github.com/IBM-Swift/Package-Builder.git
