--- a/.travis.yml
+++ b/.travis.yml
@@ -30,21 +30,17 @@ matrix:
       dist: xenial
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=swift:5.0.3-xenial SWIFT_SNAPSHOT=5.0.3
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu16.04:5.0.3 SWIFT_SNAPSHOT=5.0.3
+    - os: linux
+      dist: bionic
+      sudo: required
+      services: docker
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04::5.3.3 SWIFT_SNAPSHOT=5.3.3
     - os: linux
       dist: xenial
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=swift:5.1
-    - os: linux
-      dist: xenial
-      sudo: required
-      services: docker
-      env: DOCKER_IMAGE=swift:5.1 SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
-    - os: osx
-      osx_image: xcode9.2
-      sudo: required
-      env: SWIFT_SNAPSHOT=4.0.3
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04::5.3.3 SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
     - os: osx
       osx_image: xcode9.4
       sudo: required
@@ -61,12 +57,16 @@ matrix:
       osx_image: xcode11
       sudo: required
     - os: osx
+      osx_image: xcode12.2
+      sudo: required
+      env: SWIFT_SNAPSHOT=5.0.1
+    - os: osx
       osx_image: xcode11
       sudo: required
       env: SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
 
 before_install:
-- git clone https://github.com/IBM-Swift/Package-Builder.git
+- git clone https://github.com/Kitura/Package-Builder.git
 
 script:
 - ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR
