--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,7 @@ branches:
 # by .swift-version, unless SWIFT_SNAPSHOT is specified.
 matrix:
   include:
-    - os: linux
-      dist: xenial
-      sudo: required
-      services: docker
-      env:  DOCKER_IMAGE=swift:4.0.3 SWIFT_SNAPSHOT=4.0.3
-    - os: linux
-      dist: xenial
-      sudo: required
-      services: docker
-      env: DOCKER_IMAGE=swift:4.1.3 SWIFT_SNAPSHOT=4.1.3
-    - os: linux
-      dist: xenial
-      sudo: required
-      services: docker
-      env: DOCKER_IMAGE=swift:4.2.4 SWIFT_SNAPSHOT=4.2.4
-    - os: linux
+      os: linux
       dist: xenial
       sudo: required
       services: docker
@@ -35,33 +20,22 @@ matrix:
       dist: bionic
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:5.3.3 SWIFT_SNAPSHOT=5.3.3
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:5.4 SWIFT_SNAPSHOT=5.4
     - os: linux
       dist: xenial
       sudo: required
       services: docker
       env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:latest SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
     - os: osx
-      osx_image: xcode9.4
-      sudo: required
-      env: SWIFT_SNAPSHOT=4.1.2
-    - os: osx
-      osx_image: xcode10.1
-      sudo: required
-      env: SWIFT_SNAPSHOT=4.2.1
-    - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11
       sudo: required
       env: SWIFT_SNAPSHOT=5.0.1 JAZZY_ELIGIBLE=true
     - os: osx
-      osx_image: xcode11
-      sudo: required
-    - os: osx
       osx_image: xcode12.2
       sudo: required
-      env: SWIFT_SNAPSHOT=5.0.1
+      #env: SWIFT_SNAPSHOT=5.0.1
     - os: osx
-      osx_image: xcode11
+      osx_image: xcode12.5
       sudo: required
       env: SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
 
