--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,7 +5,7 @@ disabled_rules:
     - trailing_newline
     - force_cast
     - function_body_length
-    - variable_name
+    - identifier_name
     - line_length
     - trailing_whitespace
     - type_name
