--- a/.travis.yml
+++ b/.travis.yml
@@ -12,32 +12,28 @@ branches:
 matrix:
   include:
     - os: linux
-      dist: xenial
+      dist: bionic
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu16.04:5.1.5 SWIFT_SNAPSHOT=5.1.5
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:5.1.5
     - os: linux
       dist: bionic
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:5.4 SWIFT_SNAPSHOT=5.4
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:5.4
     - os: linux
-      dist: xenial
+      dist: bionic
       sudo: required
       services: docker
-      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:latest SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
-    - os: osx
-      osx_image: xcode11
-      sudo: required
-      env: SWIFT_SNAPSHOT=5.1.5 JAZZY_ELIGIBLE=true
+      env: DOCKER_IMAGE=docker.kitura.net/kitura/swift-ci-ubuntu18.04:latest USE_SWIFT_DEVELOPMENT_SNAPSHOT=1
     - os: osx
       osx_image: xcode12.2
       sudo: required
-      #env: SWIFT_SNAPSHOT=5.1.5
+      env: JAZZY_ELIGIBLE=true
     - os: osx
-      osx_image: xcode12.5
+      osx_image: xcode13.2
       sudo: required
-      env: SWIFT_SNAPSHOT=$SWIFT_DEVELOPMENT_SNAPSHOT
+      env: USE_SWIFT_DEVELOPMENT_SNAPSHOT=1
 
 before_install:
 - git clone https://github.com/Kitura/Package-Builder.git
